--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -41,7 +41,9 @@
     <!-- L -->
 
     <!-- M -->
-
+    <li>
+        <a href="{{ path('maroko') }}">Maroko</a>
+    </li>
     <!-- N -->
 
     <!-- O -->
