--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -51,7 +51,9 @@
     <!-- Q -->
 
     <!-- R -->
-
+    <li>
+        <a href="{{ path('romania') }}">Romania</a>
+    </li>
     <!-- S -->
 
     <!-- T -->
