--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -25,7 +25,9 @@
     <!-- D -->
 
     <!-- E -->
-
+    <li>
+        <a href="{{ path('etiopia') }}">Etiopia</a>
+    </li>
     <!-- F -->
 
     <!-- G -->
