--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -35,7 +35,9 @@
     <!-- I -->
 
     <!-- J -->
-
+    <li>
+        <a href="{{ path('japan') }}">Rivers in Japan</a>
+    </li>
     <!-- K -->
 
     <!-- L -->
