Syria: menu i test

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -53,7 +53,9 @@
     <!-- R -->
 
     <!-- S -->
-
+    <li>
+    <a href="{{ path('syria') }}">Syria</a>
+    </li>
     <!-- T -->
 
     <!-- U -->
