--- a/app/Resources/views/default/romania.html.twig
+++ b/app/Resources/views/default/romania.html.twig
@@ -4,8 +4,12 @@
         <thead>
         <tr>
             <th>#</th>
-            <th>Name</th>
-            <th>Depth</th>
+            <th>Dunaj</th>
+            <th>123</th>
+            <th>Cisa</th>
+            <th>456</th>
+            <th>Marusza</th>
+            <th>789</th>
         </tr>
         </thead>
         <tbody>
