Kazachstan: menu i testy

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -37,7 +37,9 @@
     <!-- J -->
 
     <!-- K -->
-
+         <li>
+            <a href="{{ path('kazachstan') }}">Kazachstan</a>
+        </li>
     <!-- L -->
 
     <!-- M -->
