--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -47,7 +47,9 @@
         </li>
         
     <!-- I -->
-
+    <li>
+        <a href="{{ path('italy') }}">Italy</a>
+    </li>
     <!-- J -->
     <li>
         <a href="{{ path('japan') }}">Rivers in Japan</a>
