gojira: plik yml

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -48,7 +48,7 @@
         
     <!-- I -->
     <li>
-        <a href="{{ path('italy') }}">Italy</a>
+        <a href="{{ path('brazil') }}">Brazil</a>
     </li>
     <!-- J -->
     <li>
