--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -21,6 +21,10 @@
             <a href="{{ path('Anglia') }}">Anglia...</a>
         </li>
     <!-- B -->
+    <li>
+        <a href="{{ path('rosja') }}">rosja...</a>
+    </li>
+
 
     <!-- C -->
 
